Add GitHub Actions workflow for context variable testing

--- a/.github/workflows/context_variable.yml
+++ b/.github/workflows/context_variable.yml
@@ -1,10 +1,24 @@
-name: Testing context variable
+name: Testing Context Variables
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
 
 env:
-  cloud: google-cloud
+  CLOUD_PROVIDER: google-cloud
 
 jobs:
   test_context_variables:
+    name: Test GitHub Context Variables
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check GitHub context variables
+        run: |
+          echo "Repository full name : ${{ github.repository }}"
+          echo "Repository owner     : ${{ github.repository_owner }}"
+          echo "Workflow name        : ${{ github.workflow }}"
+          echo "Event name           : ${{ github.event_name }}"
+          echo "Branch name          : ${{ github.ref_name }}"
+          echo "Commit SHA           : ${{ github.sha }}"
+          echo "Actor (triggered by) : ${{ github.actor }}"
+          echo "Cloud provider (env) : $CLOUD_PROVIDER"
